--- a/Comp229-TeamAssign/Comp229-TeamAssign.csproj
+++ b/Comp229-TeamAssign/Comp229-TeamAssign.csproj
@@ -182,8 +182,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\GenericController.cs" />
+    <Compile Include="Database\Models\Book.cs" />
     <Compile Include="Database\DAOs\GenericDAO.cs" />
+    <Compile Include="Database\Models\Author.cs" />
     <Compile Include="Database\Models\GenericModel.cs" />
+    <Compile Include="Database\Models\PrimaryKeys\DecimalPrimaryKey.cs" />
+    <Compile Include="Database\Models\PrimaryKeys\GenericPrimaryKey.cs" />
+    <Compile Include="Database\Models\Publisher.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
