Fixed the bugs on the DAO.

--- a/Comp229-TeamAssign/Web.config
+++ b/Comp229-TeamAssign/Web.config
@@ -46,5 +46,9 @@
   </system.codedom>
   <connectionStrings>
     <add name="SqlCnnStr" providerName="System.Data.SqlClient" connectionString="Server=localhost;Integrated Security=True;Initial Catalog=Comp229_TeamAssign;" />
+    <add name="OraCnnStr" providerName="System.Data.SqlClient" connectionString="ReplaceThisString" />
   </connectionStrings>
+  <appSettings>
+    <add key="DbType" value="SQLSVR" />
+  </appSettings>
 </configuration>
