--- a/Comp229-TeamAssign/Comp229-TeamAssign.csproj
+++ b/Comp229-TeamAssign/Comp229-TeamAssign.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Database\Models\PrimaryKeys\GenericPrimaryKey.cs" />
     <Compile Include="Database\Models\Publisher.cs" />
     <Compile Include="Database\QueryPage.cs" />
+    <Compile Include="Patterns\Singleton.cs" />
     <Compile Include="Utils\DatabaseUtils.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
