--- a/Comp229-TeamAssign/Comp229-TeamAssign.csproj
+++ b/Comp229-TeamAssign/Comp229-TeamAssign.csproj
@@ -181,7 +181,9 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\GenericController.cs" />
+    <Compile Include="Controllers\IBookController.cs" />
     <Compile Include="Database\DAOs\BookDAO.cs" />
     <Compile Include="Database\DAOs\IBookDAO.cs" />
     <Compile Include="Database\DAOs\IGenericDAO.cs" />
