Created the header and the footer.

--- a/Comp229-TeamAssign/Comp229-TeamAssign.csproj
+++ b/Comp229-TeamAssign/Comp229-TeamAssign.csproj
@@ -144,6 +144,7 @@
     <Content Include="Documents\ProjectDocumentation.docx" />
     <Content Include="Documents\COMP-229_TeamProject.vpp" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Images\logo.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -236,7 +237,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
