--- a/Comp229-TeamAssign/Web.config
+++ b/Comp229-TeamAssign/Web.config
@@ -45,7 +45,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SqlCnnStr" providerName="System.Data.SqlClient" connectionString="Server=localhost;Integrated Security=True;Initial Catalog=Comp229_TeamAssign;" />
+    <add name="SqlCnnStr" providerName="System.Data.SqlClient" connectionString="Server=localhost\SQLEXPRESS;Integrated Security=True;Initial Catalog=Comp229_TeamAssign;" />
     <add name="OraCnnStr" providerName="System.Data.SqlClient" connectionString="ReplaceThisString" />
   </connectionStrings>
   <appSettings>
