--- a/Comp229-TeamAssign/Web.config
+++ b/Comp229-TeamAssign/Web.config
@@ -47,7 +47,7 @@
   <connectionStrings>
     <add name="SqlCnnStr" providerName="System.Data.SqlClient" connectionString="Server=localhost;Integrated Security=True;Initial Catalog=Comp229_TeamAssign;" />
     <add name="SqlExprCnnStr" providerName="System.Data.SqlClient" connectionString="Server=localhost\SQLEXPRESS;Integrated Security=True;Initial Catalog=Comp229_TeamAssign;" />
-    <add name="OraCnnStr" providerName="System.Data.SqlClient" connectionString="ReplaceThisString" />
+    <add name="OraCnnStr" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=oracle1.centennialcollege.ca:1521/SQLD;USER ID=COMP214F17_GROUP_8;PASSWORD=Gr0up_3iGht;Pooling=true; Min Pool Size=10;Max Pool Size=20;Connection Lifetime=300;Connection Timeout=60;Incr Pool Size=5;Decr Pool Size=2;" />
   </connectionStrings>
   <appSettings>
     <add key="DbType" value="SQLSVR" />
