Created the Login functionality.

--- a/Comp229-TeamAssign/Comp229-TeamAssign.csproj
+++ b/Comp229-TeamAssign/Comp229-TeamAssign.csproj
@@ -197,9 +197,14 @@
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\GenericController.cs" />
     <Compile Include="Controllers\IBookController.cs" />
+    <Compile Include="Controllers\IUserController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Database\DAOs\BookDAO.cs" />
     <Compile Include="Database\DAOs\IBookDAO.cs" />
     <Compile Include="Database\DAOs\IGenericDAO.cs" />
+    <Compile Include="Database\DAOs\IUserDAO.cs" />
+    <Compile Include="Database\DAOs\UserDAO.cs" />
+    <Compile Include="Database\DbType.cs" />
     <Compile Include="Database\Exceptions\DatabaseException.cs" />
     <Compile Include="Database\Models\Book.cs" />
     <Compile Include="Database\DAOs\GenericDAO.cs" />
@@ -210,6 +215,7 @@
     <Compile Include="Database\Models\PrimaryKeys\DecimalPrimaryKey.cs" />
     <Compile Include="Database\Models\PrimaryKeys\GenericPrimaryKey.cs" />
     <Compile Include="Database\Models\Publisher.cs" />
+    <Compile Include="Database\Models\User.cs" />
     <Compile Include="Database\QueryPage.cs" />
     <Compile Include="Database\QueryParameter.cs" />
     <Compile Include="Login.aspx.cs">
